--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Xin Ding</title>
+</head>
+<body>
+    <h1>ET710 - FrontEnd development</h1>
+    <h2>Xin Ding</h2>
+    <hr/>
+    <h3>Lab Assigment</h3>
+    <ul>
+        <li><a href="lab2/lab2home.html">Lab 2: basic HTML</a></li>
+    </ul>
 
-</html>html>
+</body>
+</html>
